# AT2-Wordle-Clone

./: .gitignore  README.md  audit_log.py  audit_log_untyped.py  benchmark.py  justfile  main.py  pyproject.toml  test.py  todo.md  wordle.py
archive/: audit.json  inspcect_valid_words.py  two_pass_score_logic.py
test/: __init__.py  test_audit_log.py  test_wordle.py
