[project]
name = "at2-wordle-clone"
version = "0.1.0"
description = "CLI Wordle Clone"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 79

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.12"
ignore = ["wordle.py"]

[tool.ruff.lint]
select = ["RUF"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true
docstring-code-line-length = 79
indent-style = "space"

[tool.ruff.lint.pydocstyle]
convention = "google"
